@@ -1,4 +1,7 @@
--Bookmarks
+-Bookmarks via pop-up menu
 -Full text search (like-xcode);
 -Make XASH work better w/non-english installations (language code selection)
 -Remove the need for a help index file reference for flash 7/8
+-Resuming the page you were reading, after you have quit the program and run it again
+-cmd+f be for searching the current page and having cmd+opt+f for the book search (searchFor:direction:caseSensitive:wrap: for webview searches)
+-Fix livedoc links (maybe just open in default browser)
