@@ -1,0 +1,13 @@
+//
+//  MABReturnActionTableView.h
+//  XASH
+//
+//  Created by Michael Bianco on 9/21/06.
+//  Copyright 2006 __MyCompanyName__. All rights reserved.
+//
+
+#import <Cocoa/Cocoa.h>
+
+
+@interface MABReturnActionOutlineView : NSOutlineView {}
+@end
